--- a/sitemap.html
+++ b/sitemap.html
@@ -18,68 +18,68 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style type="text/css">
-ul{
-list-style: circle;
-}
-a{
-text-decoration: none!important;
-}
-.nav-link{
-color: #000000!important;
-
-}
-.w72c47ebba1955620e0b2923ca6691c24 a{
-font-size:16px;
-}
-html{
-scroll-behavior: smooth;
-}
-.btn-md{
-padding: 15.5px 29.6px;
-border-radius: 0;
-}
-.c8cb744e4dd0ff5d67d51a27c4a34ba93 a,.w72c47ebba1955620e0b2923ca6691c24 a{
-color:#040404!important;
-text-decoration: underline !important;
+.navbar a{
+font-size: 18.5px!important;
+font-weight: bold;
 }
 footer a{
 color:#ffffff;
 text-decoration: underline;
 }
-footer *{
-font-size:16px !important;
+.c642ceda7a9cd449fbe37df1ccd9ca697:hover{
+box-shadow: 0 50px 49.7px -25px rgb(0 0 0 / 30%);
+transform: rotate(-2deg) scale(1.03);
 }
-.w72c47ebba1955620e0b2923ca6691c24 p,.w72c47ebba1955620e0b2923ca6691c24 span,.w72c47ebba1955620e0b2923ca6691c24 label{
-font-size:16px!important;
+ul{
+list-style: circle;
 }
 .nav-item{
 padding-left:7.6px;
-padding-right:7.5px;
+padding-right:7.6px;
 padding-top:5.1px;
-padding-bottom:4.5px;
+padding-bottom:5.4px;
 }
-.navbar a{
-font-size: 17.5px!important;
-font-weight: bold;
+html{
+scroll-behavior: smooth;
 }
-.bcd9561bdba9420964c4e36cb85110f58{
-background-color:#ffc107!important;
-border-color:#ffc107!important;
-color:#000000!important;
+a{
+text-decoration: none!important;
 }
-footer{
-background:#0e0e0e;
-color:#ffffff;
+.d01bf12beac2e953e727a9a817ad9d844 a,.ye480bce0f6fac5c706c694cacd0247f6 a{
+color:#020202!important;
+text-decoration: underline !important;
+}
+footer *{
+font-size:16px !important;
 }
 *{
 font-family: 'Kumbh Sans', sans-serif;
 }
-.c8cb744e4dd0ff5d67d51a27c4a34ba93 p,.c8cb744e4dd0ff5d67d51a27c4a34ba93 a,.c8cb744e4dd0ff5d67d51a27c4a34ba93 span,.c8cb744e4dd0ff5d67d51a27c4a34ba93 label{
+.a71d065c498231a2169a7134882bfc617{
+background-color:#ffc107!important;
+border-color:#ffc107!important;
+color:#000000!important;
+}
+.d01bf12beac2e953e727a9a817ad9d844 p,.d01bf12beac2e953e727a9a817ad9d844 a,.d01bf12beac2e953e727a9a817ad9d844 span,.d01bf12beac2e953e727a9a817ad9d844 label{
 font-size:16px!important;
 }
-.z1329cabb86c97811b968d7fe9d011028:hover{
-box-shadow: 0 49.8px 50.1px -25px rgb(0 0 0 / 30%);
-transform: rotate(-2deg) scale(1.03);
+.btn-md{
+padding: 14.6px 29.9px;
+border-radius: 0;
+}
+.ye480bce0f6fac5c706c694cacd0247f6 a{
+font-size:16px;
+}
+footer{
+background:#070707;
+color:#ffffff;
+}
+.ye480bce0f6fac5c706c694cacd0247f6 p,.ye480bce0f6fac5c706c694cacd0247f6 span,.ye480bce0f6fac5c706c694cacd0247f6 label{
+font-size:16px!important;
+}
+.nav-link{
+color: #000000!important;
+
 }
 </style>
 </head>
@@ -87,25 +87,25 @@ transform: rotate(-2deg) scale(1.03);
 <nav class="navbar-expand-lg navbar">
 <a class="navbar-brand" href="https://olb45.netlify.app/index.html"  ><img alt="img/logo.jpg" src="img/logo.jpg" ></a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-<span class="navbar-toggler-icon"></span></button><div class="navbar-collapse collapse" id="navbarSupportedContent">
-<ul class="align-items-center navbar-nav ml-auto d-flex"><li class="nav-item">
-<a class="nav-link bab54e40f06471619a2b9ac7dafbfaefe" href="https://olb45.netlify.app/index.html" >plumbing quotes</a>
+<span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navbarSupportedContent">
+<ul class="d-flex navbar-nav align-items-center ml-auto"><li class="nav-item">
+<a class="nav-link y7ec9413e3aa278327351f42d579943e2" href="https://olb45.netlify.app/index.html" >plumbing quotes</a>
 </li>
 <li class="nav-item">
-<a class="nav-link bab54e40f06471619a2b9ac7dafbfaefe" href="https://olb45.netlify.app/plumbing-quotes-north-london.html" >plumbing quotes north london</a>
+<a class="nav-link y7ec9413e3aa278327351f42d579943e2" href="https://olb45.netlify.app/plumbing-quotes-north-london.html" >plumbing quotes north london</a>
 </li>
 <li class="nav-item">
-<a class="nav-link bab54e40f06471619a2b9ac7dafbfaefe" href="https://olb45.netlify.app/quote-my-plumbing-job.html" >quote my plumbing job</a>
+<a class="y7ec9413e3aa278327351f42d579943e2 nav-link" href="https://olb45.netlify.app/quote-my-plumbing-job.html" >quote my plumbing job</a>
 </li>
 <li class="nav-item">
-<a class="bab54e40f06471619a2b9ac7dafbfaefe nav-link" href="https://olb45.netlify.app/quote-my-job.html" >quote my job</a>
+<a class="y7ec9413e3aa278327351f42d579943e2 nav-link" href="https://olb45.netlify.app/quote-my-job.html" >quote my job</a>
 </li>
 <li class="nav-item dropdown">
-<a class="dropdown-toggle bab54e40f06471619a2b9ac7dafbfaefe nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
-<div class="dropdown-menu-right dropdown-menu" aria-labelledby="navbarDropdown">
+<a class="nav-link dropdown-toggle y7ec9413e3aa278327351f42d579943e2" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
+<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
 <a class="dropdown-item" href="https://olb45.netlify.app/local-plumber.html"  >local plumber</a><a class="dropdown-item" href="https://olb45.netlify.app/plumber-in-north-london.html"  >plumber in north london</a><a class="dropdown-item" href="https://olb45.netlify.app/local-plumbing-service.html"  >local plumbing service</a><a class="dropdown-item" href="https://olb45.netlify.app/plumber-north-london.html"  >plumber north london</a></div>
 </li>
-<li class="nav-item"><a class="nav-link bab54e40f06471619a2b9ac7dafbfaefe" rel=nofollow href="https://olb45.netlify.app/about-us.html">About Us</a>
+<li class="nav-item"><a class="y7ec9413e3aa278327351f42d579943e2 nav-link" rel=nofollow href="https://olb45.netlify.app/about-us.html">About Us</a>
 </li></ul>
 </div>
 </nav>
@@ -134,22 +134,22 @@ transform: rotate(-2deg) scale(1.03);
 </div>
 </section>
 <footer>
-<div class="py-4 container pt-5" >
+<div class="pt-5 container py-4" >
 <div class="row"><div class="col-lg-3">
 <p>MML Plumbing</p>
-<p>Company Website : <a class="bab54e40f06471619a2b9ac7dafbfaefe" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
-</div><div class="col-lg-3"><p><a class="bab54e40f06471619a2b9ac7dafbfaefe" href="https://olb45.netlify.app/sitemap.html" rel="nofollow">Sitemap</a></p>
-<p><a class="bab54e40f06471619a2b9ac7dafbfaefe" href="https://olb45.netlify.app/privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
-<p><a class="bab54e40f06471619a2b9ac7dafbfaefe" href="https://olb45.netlify.app/about-us.html" rel="nofollow">About Us</a></p>
+<p>Company Website : <a class="y7ec9413e3aa278327351f42d579943e2" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
+</div><div class="col-lg-3"><p><a class="y7ec9413e3aa278327351f42d579943e2" href="https://olb45.netlify.app/sitemap.html" rel="nofollow">Sitemap</a></p>
+<p><a class="y7ec9413e3aa278327351f42d579943e2" href="https://olb45.netlify.app/privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
+<p><a class="y7ec9413e3aa278327351f42d579943e2" href="https://olb45.netlify.app/about-us.html" rel="nofollow">About Us</a></p>
 <p><img src="https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=https://olb45.netlify.app/.html"></p>
 </p>
 </div><div class="col-lg-3">
 <div>
 <p>Follow us</p>
-<a href="https://www.facebook.com/mmlplumbing.co.uk" class="a9b4c32dcc54d59040dc206c3223e640f facebook" rel="nofollow"><i class="fa fa-facebook"></i></a>
-<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="pinterest a9b4c32dcc54d59040dc206c3223e640f" rel="nofollow"><i class="fa fa-linkedin"></i></a>
-<a href="https://www.instagram.com/mmlplumbingltd/" class="google a9b4c32dcc54d59040dc206c3223e640f-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
-<a href="https://twitter.com/mmlplumbing" class="a9b4c32dcc54d59040dc206c3223e640f twitter" rel="nofollow"><i class="fa fa-twitter"></i></a>
+<a href="https://www.facebook.com/mmlplumbing.co.uk" class="uc7ff929db110029f3c1acea0b9af94d9 facebook" rel="nofollow"><i class="fa fa-facebook"></i></a>
+<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="uc7ff929db110029f3c1acea0b9af94d9 pinterest" rel="nofollow"><i class="fa fa-linkedin"></i></a>
+<a href="https://www.instagram.com/mmlplumbingltd/" class="google uc7ff929db110029f3c1acea0b9af94d9-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
+<a href="https://twitter.com/mmlplumbing" class="twitter uc7ff929db110029f3c1acea0b9af94d9" rel="nofollow"><i class="fa fa-twitter"></i></a>
 </div>
 </div></div>
 </div>
