--- a/sitemap.html
+++ b/sitemap.html
@@ -18,94 +18,94 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style type="text/css">
+.nav-link{
+color: #000000!important;
+
+}
 .navbar a{
 font-size: 18.5px!important;
 font-weight: bold;
+}
+.nav-item{
+padding-left:7.5px;
+padding-right:8px;
+padding-top:4.9px;
+padding-bottom:5.4px;
 }
 footer a{
 color:#ffffff;
 text-decoration: underline;
 }
-.c642ceda7a9cd449fbe37df1ccd9ca697:hover{
-box-shadow: 0 50px 49.7px -25px rgb(0 0 0 / 30%);
-transform: rotate(-2deg) scale(1.03);
-}
-ul{
-list-style: circle;
-}
-.nav-item{
-padding-left:7.6px;
-padding-right:7.6px;
-padding-top:5.1px;
-padding-bottom:5.4px;
-}
-html{
-scroll-behavior: smooth;
-}
-a{
-text-decoration: none!important;
-}
-.d01bf12beac2e953e727a9a817ad9d844 a,.ye480bce0f6fac5c706c694cacd0247f6 a{
-color:#020202!important;
-text-decoration: underline !important;
-}
-footer *{
-font-size:16px !important;
-}
-*{
-font-family: 'Kumbh Sans', sans-serif;
-}
-.a71d065c498231a2169a7134882bfc617{
+.u7cedd9ea2d875625118fc9283bf4ee70{
 background-color:#ffc107!important;
 border-color:#ffc107!important;
 color:#000000!important;
 }
-.d01bf12beac2e953e727a9a817ad9d844 p,.d01bf12beac2e953e727a9a817ad9d844 a,.d01bf12beac2e953e727a9a817ad9d844 span,.d01bf12beac2e953e727a9a817ad9d844 label{
+.f587d40a400b155783509328acf4300bf a,.y118b86a5e64b9adfcc2bc1589d467e86 a{
+color:#040404!important;
+text-decoration: underline !important;
+}
+.y118b86a5e64b9adfcc2bc1589d467e86 p,.y118b86a5e64b9adfcc2bc1589d467e86 span,.y118b86a5e64b9adfcc2bc1589d467e86 label{
 font-size:16px!important;
 }
-.btn-md{
-padding: 14.6px 29.9px;
-border-radius: 0;
-}
-.ye480bce0f6fac5c706c694cacd0247f6 a{
+.y118b86a5e64b9adfcc2bc1589d467e86 a{
 font-size:16px;
 }
-footer{
-background:#070707;
-color:#ffffff;
+*{
+font-family: 'Kumbh Sans', sans-serif;
 }
-.ye480bce0f6fac5c706c694cacd0247f6 p,.ye480bce0f6fac5c706c694cacd0247f6 span,.ye480bce0f6fac5c706c694cacd0247f6 label{
+a{
+text-decoration: none!important;
+}
+.f587d40a400b155783509328acf4300bf p,.f587d40a400b155783509328acf4300bf a,.f587d40a400b155783509328acf4300bf span,.f587d40a400b155783509328acf4300bf label{
 font-size:16px!important;
 }
-.nav-link{
-color: #000000!important;
-
+footer *{
+font-size:16px !important;
+}
+.btn-md{
+padding: 14.7px 29.5px;
+border-radius: 0;
+}
+footer{
+background:#050505;
+color:#ffffff;
+}
+ul{
+list-style: circle;
+}
+html{
+scroll-behavior: smooth;
+}
+.w89d0ac84b452fdf9f7c7814401a7acd6:hover{
+box-shadow: 0 49.6px 49.8px -25px rgb(0 0 0 / 30%);
+transform: rotate(-2deg) scale(1.03);
 }
 </style>
 </head>
 <body>
-<nav class="navbar-expand-lg navbar">
+<nav class="navbar navbar-expand-lg">
 <a class="navbar-brand" href="https://olb45.netlify.app/index.html"  ><img alt="img/logo.jpg" src="img/logo.jpg" ></a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navbarSupportedContent">
-<ul class="d-flex navbar-nav align-items-center ml-auto"><li class="nav-item">
-<a class="nav-link y7ec9413e3aa278327351f42d579943e2" href="https://olb45.netlify.app/index.html" >plumbing quotes</a>
+<ul class="align-items-center ml-auto navbar-nav d-flex"><li class="nav-item">
+<a class="z4381aa1bb387eba7fef11f50c1cd5f63 nav-link" href="https://olb45.netlify.app/index.html" >plumbing quotes</a>
 </li>
 <li class="nav-item">
-<a class="nav-link y7ec9413e3aa278327351f42d579943e2" href="https://olb45.netlify.app/plumbing-quotes-north-london.html" >plumbing quotes north london</a>
+<a class="nav-link z4381aa1bb387eba7fef11f50c1cd5f63" href="https://olb45.netlify.app/plumbing-quotes-north-london.html" >plumbing quotes north london</a>
 </li>
 <li class="nav-item">
-<a class="y7ec9413e3aa278327351f42d579943e2 nav-link" href="https://olb45.netlify.app/quote-my-plumbing-job.html" >quote my plumbing job</a>
+<a class="nav-link z4381aa1bb387eba7fef11f50c1cd5f63" href="https://olb45.netlify.app/quote-my-plumbing-job.html" >quote my plumbing job</a>
 </li>
 <li class="nav-item">
-<a class="y7ec9413e3aa278327351f42d579943e2 nav-link" href="https://olb45.netlify.app/quote-my-job.html" >quote my job</a>
+<a class="nav-link z4381aa1bb387eba7fef11f50c1cd5f63" href="https://olb45.netlify.app/quote-my-job.html" >quote my job</a>
 </li>
-<li class="nav-item dropdown">
-<a class="nav-link dropdown-toggle y7ec9413e3aa278327351f42d579943e2" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
-<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+<li class="dropdown nav-item">
+<a class="dropdown-toggle nav-link z4381aa1bb387eba7fef11f50c1cd5f63" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
+<div class="dropdown-menu-right dropdown-menu" aria-labelledby="navbarDropdown">
 <a class="dropdown-item" href="https://olb45.netlify.app/local-plumber.html"  >local plumber</a><a class="dropdown-item" href="https://olb45.netlify.app/plumber-in-north-london.html"  >plumber in north london</a><a class="dropdown-item" href="https://olb45.netlify.app/local-plumbing-service.html"  >local plumbing service</a><a class="dropdown-item" href="https://olb45.netlify.app/plumber-north-london.html"  >plumber north london</a></div>
 </li>
-<li class="nav-item"><a class="y7ec9413e3aa278327351f42d579943e2 nav-link" rel=nofollow href="https://olb45.netlify.app/about-us.html">About Us</a>
+<li class="nav-item"><a class="nav-link z4381aa1bb387eba7fef11f50c1cd5f63" rel=nofollow href="https://olb45.netlify.app/about-us.html">About Us</a>
 </li></ul>
 </div>
 </nav>
@@ -134,22 +134,22 @@ color: #000000!important;
 </div>
 </section>
 <footer>
-<div class="pt-5 container py-4" >
+<div class="py-4 container pt-5" >
 <div class="row"><div class="col-lg-3">
 <p>MML Plumbing</p>
-<p>Company Website : <a class="y7ec9413e3aa278327351f42d579943e2" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
-</div><div class="col-lg-3"><p><a class="y7ec9413e3aa278327351f42d579943e2" href="https://olb45.netlify.app/sitemap.html" rel="nofollow">Sitemap</a></p>
-<p><a class="y7ec9413e3aa278327351f42d579943e2" href="https://olb45.netlify.app/privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
-<p><a class="y7ec9413e3aa278327351f42d579943e2" href="https://olb45.netlify.app/about-us.html" rel="nofollow">About Us</a></p>
+<p>Company Website : <a class="z4381aa1bb387eba7fef11f50c1cd5f63" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
+</div><div class="col-lg-3"><p><a class="z4381aa1bb387eba7fef11f50c1cd5f63" href="https://olb45.netlify.app/sitemap.html" rel="nofollow">Sitemap</a></p>
+<p><a class="z4381aa1bb387eba7fef11f50c1cd5f63" href="https://olb45.netlify.app/privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
+<p><a class="z4381aa1bb387eba7fef11f50c1cd5f63" href="https://olb45.netlify.app/about-us.html" rel="nofollow">About Us</a></p>
 <p><img src="https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=https://olb45.netlify.app/.html"></p>
 </p>
 </div><div class="col-lg-3">
 <div>
 <p>Follow us</p>
-<a href="https://www.facebook.com/mmlplumbing.co.uk" class="uc7ff929db110029f3c1acea0b9af94d9 facebook" rel="nofollow"><i class="fa fa-facebook"></i></a>
-<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="uc7ff929db110029f3c1acea0b9af94d9 pinterest" rel="nofollow"><i class="fa fa-linkedin"></i></a>
-<a href="https://www.instagram.com/mmlplumbingltd/" class="google uc7ff929db110029f3c1acea0b9af94d9-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
-<a href="https://twitter.com/mmlplumbing" class="twitter uc7ff929db110029f3c1acea0b9af94d9" rel="nofollow"><i class="fa fa-twitter"></i></a>
+<a href="https://www.facebook.com/mmlplumbing.co.uk" class="facebook b6dbefa09520e9a75b83a700691681e7c" rel="nofollow"><i class="fa fa-facebook"></i></a>
+<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="pinterest b6dbefa09520e9a75b83a700691681e7c" rel="nofollow"><i class="fa fa-linkedin"></i></a>
+<a href="https://www.instagram.com/mmlplumbingltd/" class="google b6dbefa09520e9a75b83a700691681e7c-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
+<a href="https://twitter.com/mmlplumbing" class="b6dbefa09520e9a75b83a700691681e7c twitter" rel="nofollow"><i class="fa fa-twitter"></i></a>
 </div>
 </div></div>
 </div>
