--- a/about-us.html
+++ b/about-us.html
@@ -18,101 +18,101 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style type="text/css">
-*{
-font-family: 'Kumbh Sans', sans-serif;
+.tfb9e35843771fc44d04def053ad53bc2:hover{
+box-shadow: 0 49.5px 50.4px -25px rgb(0 0 0 / 30%);
+transform: rotate(-2deg) scale(1.03);
 }
 footer *{
 font-size:16px !important;
 }
-.nav-link{
-color: #000000!important;
-
-}
-html{
-scroll-behavior: smooth;
-}
-.vaa8bfeeb3165f0919893b152cd0971f1:hover{
-box-shadow: 0 50.3px 50.2px -25px rgb(0 0 0 / 30%);
-transform: rotate(-2deg) scale(1.03);
+.btn-md{
+padding: 14.9px 30px;
+border-radius: 0;
 }
 a{
 text-decoration: none!important;
 }
-.x35ae2b8d1af0796f44dc5987f5452dc9{
+.v8ded0cfd05740d3c4818e94fa182106c a,.z5d5dac405805c6375811e9f3fb634d5e a{
+color:#0b0b0b!important;
+text-decoration: underline !important;
+}
+.z5d5dac405805c6375811e9f3fb634d5e a{
+font-size:16px;
+}
+ul{
+list-style: circle;
+}
+html{
+scroll-behavior: smooth;
+}
+.v4ed6458937372bd483719abf0cc9d87e{
 border: 1px solid #708d9b3e;
 border-radius: 5px;
 padding: 20px 20px;
-background: #edebe7;
+background: #eeece8;
 }
-.e8322eb5fd99dd30b12b57cc98cdefff3 p,.e8322eb5fd99dd30b12b57cc98cdefff3 span,.e8322eb5fd99dd30b12b57cc98cdefff3 label{
+.z5d5dac405805c6375811e9f3fb634d5e p,.z5d5dac405805c6375811e9f3fb634d5e span,.z5d5dac405805c6375811e9f3fb634d5e label{
 font-size:16px!important;
 }
-.e8322eb5fd99dd30b12b57cc98cdefff3 a{
-font-size:16px;
-}
-.de370d28e8bba58786b784c640f3932e9{
+.wde45f1cc3ed8e44b8c94a9e5bdd4cef2{
 background-color:#ffc107!important;
 border-color:#ffc107!important;
 color:#000000!important;
 }
 .nav-item{
-padding-left:7.8px;
-padding-right:7.5px;
-padding-top:4.5px;
-padding-bottom:4.5px;
-}
-.d139f23710642113787439c1bdd29b4f9 p,.d139f23710642113787439c1bdd29b4f9 a,.d139f23710642113787439c1bdd29b4f9 span,.d139f23710642113787439c1bdd29b4f9 label{
-font-size:16px!important;
+padding-left:7.6px;
+padding-right:7.6px;
+padding-top:5.1px;
+padding-bottom:4.7px;
 }
 footer a{
 color:#ffffff;
 text-decoration: underline;
 }
-ul{
-list-style: circle;
-}
-.navbar a{
-font-size: 17.7px!important;
-font-weight: bold;
-}
-.d139f23710642113787439c1bdd29b4f9 a,.e8322eb5fd99dd30b12b57cc98cdefff3 a{
-color:#111111!important;
-text-decoration: underline !important;
-}
 footer{
-background:#040404;
+background:#080808;
 color:#ffffff;
 }
-.btn-md{
-padding: 14.5px 29.8px;
-border-radius: 0;
+*{
+font-family: 'Kumbh Sans', sans-serif;
+}
+.v8ded0cfd05740d3c4818e94fa182106c p,.v8ded0cfd05740d3c4818e94fa182106c a,.v8ded0cfd05740d3c4818e94fa182106c span,.v8ded0cfd05740d3c4818e94fa182106c label{
+font-size:16px!important;
+}
+.navbar a{
+font-size: 18.3px!important;
+font-weight: bold;
+}
+.nav-link{
+color: #000000!important;
+
 }
 </style>
 </head>
 <body>
      
-<nav class="navbar-expand-lg navbar">
+<nav class="navbar navbar-expand-lg">
 <a class="navbar-brand" href="index.html"  ><img alt="img/logo.jpg" src="img/logo.jpg" ></a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navbarSupportedContent">
-<ul class="ml-auto align-items-center d-flex navbar-nav"><li class="nav-item">
-<a class="da6caaa5128fe3839f5fdc98a5463d87e nav-link" href="index.html" >plumbing quotes</a>
+<ul class="align-items-center d-flex navbar-nav ml-auto"><li class="nav-item">
+<a class="a255ec51881b4c1014b9baa3f8d1bade2 nav-link" href="index.html" >plumbing quotes</a>
 </li>
 <li class="nav-item">
-<a class="nav-link da6caaa5128fe3839f5fdc98a5463d87e" href="plumbing-quotes-north-london.html" >plumbing quotes north london</a>
+<a class="a255ec51881b4c1014b9baa3f8d1bade2 nav-link" href="plumbing-quotes-north-london.html" >plumbing quotes north london</a>
 </li>
 <li class="nav-item">
-<a class="nav-link da6caaa5128fe3839f5fdc98a5463d87e" href="quote-my-plumbing-job.html" >quote my plumbing job</a>
+<a class="a255ec51881b4c1014b9baa3f8d1bade2 nav-link" href="quote-my-plumbing-job.html" >quote my plumbing job</a>
 </li>
 <li class="nav-item">
-<a class="da6caaa5128fe3839f5fdc98a5463d87e nav-link" href="quote-my-job.html" >quote my job</a>
+<a class="a255ec51881b4c1014b9baa3f8d1bade2 nav-link" href="quote-my-job.html" >quote my job</a>
 </li>
 <li class="nav-item dropdown">
-<a class="dropdown-toggle nav-link da6caaa5128fe3839f5fdc98a5463d87e" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
-<div class="dropdown-menu-right dropdown-menu" aria-labelledby="navbarDropdown">
+<a class="nav-link dropdown-toggle a255ec51881b4c1014b9baa3f8d1bade2" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
+<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
 <a class="dropdown-item" href="local-plumber.html"  >local plumber</a><a class="dropdown-item" href="plumber-in-north-london.html"  >plumber in north london</a><a class="dropdown-item" href="local-plumbing-service.html"  >local plumbing service</a><a class="dropdown-item" href="plumber-north-london.html"  >plumber north london</a></div>
 </li>
-<li class="nav-item"><a class="da6caaa5128fe3839f5fdc98a5463d87e nav-link" rel=nofollow href="about-us.html">About Us</a>
+<li class="nav-item"><a class="a255ec51881b4c1014b9baa3f8d1bade2 nav-link" rel=nofollow href="about-us.html">About Us</a>
 </li></ul>
 </div>
 </nav>
@@ -125,7 +125,7 @@ border-radius: 0;
 </div>
 <div class="container py-5">
 <div class="row mb-5 pb-5">
-<div class="col-md-12 mb-3 x35ae2b8d1af0796f44dc5987f5452dc9">
+<div class="col-md-12 mb-3 v4ed6458937372bd483719abf0cc9d87e">
 <div class="row-item d-flex align-left">
 <div><a href="" class="text-dark">
 <h4>MML Plumbing</h4></a>
@@ -157,22 +157,22 @@ plumber north london</iframe>
 </div>
 </div>
 <footer>
-<div class="container py-4 pt-5" >
+<div class="pt-5 container py-4" >
 <div class="row"><div class="col-lg-3">
 <p>MML Plumbing</p>
-<p>Company Website : <a class="da6caaa5128fe3839f5fdc98a5463d87e" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
-</div><div class="col-lg-3"><p><a class="da6caaa5128fe3839f5fdc98a5463d87e" href="sitemap.html" rel="nofollow">Sitemap</a></p>
-<p><a class="da6caaa5128fe3839f5fdc98a5463d87e" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
-<p><a class="da6caaa5128fe3839f5fdc98a5463d87e" href="about-us.html" rel="nofollow">About Us</a></p>
+<p>Company Website : <a class="a255ec51881b4c1014b9baa3f8d1bade2" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
+</div><div class="col-lg-3"><p><a class="a255ec51881b4c1014b9baa3f8d1bade2" href="sitemap.html" rel="nofollow">Sitemap</a></p>
+<p><a class="a255ec51881b4c1014b9baa3f8d1bade2" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
+<p><a class="a255ec51881b4c1014b9baa3f8d1bade2" href="about-us.html" rel="nofollow">About Us</a></p>
 <p><img src="https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=" ></p>
 </p>
 </div><div class="col-lg-3">
 <div>
 <p>Follow us</p>
-<a href="https://www.facebook.com/mmlplumbing.co.uk" class="z6223141fc251817bd7af0f91b1404944 facebook" rel="nofollow"><i class="fa fa-facebook"></i></a>
-<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="pinterest z6223141fc251817bd7af0f91b1404944" rel="nofollow"><i class="fa fa-linkedin"></i></a>
-<a href="https://www.instagram.com/mmlplumbingltd/" class="z6223141fc251817bd7af0f91b1404944 google-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
-<a href="https://twitter.com/mmlplumbing" class="z6223141fc251817bd7af0f91b1404944 twitter" rel="nofollow"><i class="fa fa-twitter"></i></a>
+<a href="https://www.facebook.com/mmlplumbing.co.uk" class="facebook f45df537621a61a0a1ab49aa25bf7e0f8" rel="nofollow"><i class="fa fa-facebook"></i></a>
+<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="f45df537621a61a0a1ab49aa25bf7e0f8 pinterest" rel="nofollow"><i class="fa fa-linkedin"></i></a>
+<a href="https://www.instagram.com/mmlplumbingltd/" class="f45df537621a61a0a1ab49aa25bf7e0f8 google-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
+<a href="https://twitter.com/mmlplumbing" class="twitter f45df537621a61a0a1ab49aa25bf7e0f8" rel="nofollow"><i class="fa fa-twitter"></i></a>
 </div>
 </div></div>
 </div>
